[gd_scene load_steps=8 format=3 uid="uid://pfjuoa6k6quo"]

[ext_resource type="Script" path="res://UI/perk_selector.gd" id="1_i5chb"]
[ext_resource type="Texture2D" uid="uid://0f2fj0rwhl2w" path="res://Sprites/UI/PerkContainer.png" id="1_ipp58"]

[sub_resource type="LabelSettings" id="LabelSettings_fy7n1"]
line_spacing = 5.0
font_size = 36
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ugfhr"]
line_spacing = 5.0
font_size = 28

[sub_resource type="Animation" id="Animation_4ukhq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("button_margin:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_s2mls"]
resource_name = "show"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("button_margin:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pause_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_egph8"]
_data = {
"RESET": SubResource("Animation_4ukhq"),
"show": SubResource("Animation_s2mls")
}

[node name="PerkSelector" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_i5chb")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="button_margin" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="TextureRect" type="TextureRect" parent="button_margin"]
layout_mode = 2
texture = ExtResource("1_ipp58")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="button_margin/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 325
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 325
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="button_margin/TextureRect/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="button_margin/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 64

[node name="Perk_container" type="HBoxContainer" parent="button_margin/TextureRect/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="button_margin/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 136
theme_override_constants/margin_top = 108
theme_override_constants/margin_right = 136

[node name="VBoxContainer" type="VBoxContainer" parent="button_margin/TextureRect/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="perk_name" type="Label" parent="button_margin/TextureRect/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "test"
label_settings = SubResource("LabelSettings_fy7n1")
horizontal_alignment = 1

[node name="description" type="Label" parent="button_margin/TextureRect/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "this is a test value"
label_settings = SubResource("LabelSettings_ugfhr")
horizontal_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_egph8")
}
autoplay = "show"
